--- a/app/src/main/res/layout/invite_friends_dialog_fragment.xml
+++ b/app/src/main/res/layout/invite_friends_dialog_fragment.xml
@@ -14,7 +14,7 @@
     android:gravity="center"
     android:paddingStart="10dp"
     android:paddingEnd="10dp"
-    android:text="Invite Friends to Follow you"
+    android:text="@string/invite_friends_follow_you"
     android:textColor="@color/app_light_black"
     android:textSize="22sp"
     android:textStyle="bold" />
@@ -28,7 +28,7 @@
     android:layout_marginTop="20dp"
     android:layout_marginEnd="80dp"
     android:gravity="center"
-    android:text="Invite Friends to Follow you. wdaldmad dwa daw d ad aw daw"
+    android:text="@string/invite_friends_show_creation"
     android:textColor="@color/app_light_black"
     android:textSize="14sp" />
 
@@ -45,7 +45,7 @@
     app:shareBgColor="@color/all_facebook_share"
     app:shareImage="@drawable/ic_facebook_svg"
     app:shareImageTint="@color/white_color"
-    app:shareText="Facebook Friends"
+    app:shareText="@string/invite_friends_facebook"
     app:textSize="16sp" />
 
   <com.mycity4kids.widget.ShareButtonWidget
@@ -60,7 +60,7 @@
     app:shareBgColor="@color/all_phonebook"
     app:shareImage="@drawable/ic_contact"
     app:shareImageTint="@color/white_color"
-    app:shareText="Phonebook Contacts"
+    app:shareText="@string/all_phone_contact"
     app:textSize="16sp" />
 
   <com.mycity4kids.widget.ShareButtonWidget
@@ -75,7 +75,7 @@
     app:shareBgColor="@color/all_invite_link"
     app:shareImage="@drawable/ic_ss_generic"
     app:shareImageTint="@color/white_color"
-    app:shareText="Share Invite Link"
+    app:shareText="@string/invite_friends_link"
     app:textSize="16sp" />
 
   <TextView
