--- a/app/src/main/res/layout/add_video_details_activity.xml
+++ b/app/src/main/res/layout/add_video_details_activity.xml
@@ -123,7 +123,7 @@
                 android:layout_marginBottom="@dimen/space_10"
                 android:gravity="center_horizontal"
                 android:padding="@dimen/space_10"
-                android:text="Thank you! We will notify you once your video is uploaded."
+                android:text="@string/video_upload_thankyou_msg"
                 android:textColor="@color/input_text_color"
                 android:textSize="18sp" />
 
