--- a/app/src/main/res/layout/activity_new_editor.xml
+++ b/app/src/main/res/layout/activity_new_editor.xml
@@ -88,7 +88,7 @@
         android:text="last saved by 20 sec ago"
         android:textColor="@color/editor.last_saved"
         android:textSize="14sp"
-        android:visibility="gone"
+        android:visibility="visible"
         app:fontName="oswald.ttf" />
 
       <com.mycity4kids.widget.CustomFontTextView
