Video listing new ui

--- a/app/src/main/res/layout/video_challenge_detail_listing.xml
+++ b/app/src/main/res/layout/video_challenge_detail_listing.xml
@@ -63,7 +63,7 @@
         </com.facebook.shimmer.ShimmerFrameLayout>
 
 
-        <ListView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/vlogsListView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
