Video creation flow + Custom utility button changes + video status in published video list + checkstyle

--- a/app/src/main/res/layout/invite_friends_dialog_fragment.xml
+++ b/app/src/main/res/layout/invite_friends_dialog_fragment.xml
@@ -41,7 +41,7 @@
     android:layout_marginTop="20dp"
     android:visibility="gone"
     app:gravity="center"
-    app:radius="12dp"
+    app:radius="33dp"
     app:shareBgColor="@color/all_facebook_share"
     app:shareImage="@drawable/ic_facebook_svg"
     app:shareImageTint="@color/white_color"
@@ -56,7 +56,7 @@
     android:layout_centerHorizontal="true"
     android:layout_marginTop="20dp"
     app:gravity="center"
-    app:radius="12dp"
+    app:radius="33dp"
     app:shareBgColor="@color/all_phonebook"
     app:shareImage="@drawable/ic_contact"
     app:shareImageTint="@color/white_color"
@@ -71,7 +71,9 @@
     android:layout_centerHorizontal="true"
     android:layout_marginTop="20dp"
     app:gravity="center"
-    app:radius="12dp"
+    app:radius="33dp"
+    app:borderColor="@color/app_red"
+    app:borderthickness="2dp"
     app:shareBgColor="@color/all_invite_link"
     app:shareImage="@drawable/ic_ss_generic"
     app:shareImageTint="@color/white_color"
