--- a/app/src/main/res/layout/horizontal_recycler_view_video_challenge.xml
+++ b/app/src/main/res/layout/horizontal_recycler_view_video_challenge.xml
@@ -1,77 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  android:layout_width="wrap_content"
+  android:layout_height="wrap_content"
+  android:layout_marginEnd="12dp"
+  android:layout_marginBottom="10dp"
+  android:elevation="0dp"
+  app:cardCornerRadius="4dp"
+  app:cardElevation="0dp">
+
+  <RelativeLayout
+    android:id="@+id/topicContainer"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginRight="12dp"
-    android:layout_marginBottom="10dp"
-    android:elevation="0dp"
-    app:cardCornerRadius="4dp"
-    app:cardElevation="0dp">
+    android:layout_height="wrap_content">
 
-    <RelativeLayout
-        android:id="@+id/topicContainer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/white_color">
+    <ImageView
+      android:id="@+id/tagImageView"
+      android:layout_width="246dp"
+      android:layout_height="180dp"
+      android:adjustViewBounds="true"
+      android:foreground="@drawable/gradient_in_video_challenge_image"
+      android:scaleType="centerCrop"
+      android:src="@drawable/default_article" />
 
-        <ImageView
-            android:id="@+id/tagImageView"
-            android:layout_width="246dp"
-            android:layout_height="180dp"
-            android:adjustViewBounds="true"
-            android:foreground="@drawable/gradient_in_video_challenge_image"
-            android:src="@drawable/default_article" />
+    <com.mycity4kids.widget.CustomFontTextView
+      android:id="@+id/liveTextViewVideoChallenge"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="7dp"
+      android:layout_marginLeft="7dp"
+      android:layout_marginTop="7dp"
+      android:background="@drawable/border_live_text_on_image_video_challenge"
+      android:elevation="4dp"
+      android:paddingLeft="10dp"
+      android:paddingTop="4dp"
+      android:paddingRight="10dp"
+      android:paddingBottom="4dp"
+      android:text="@string/video_challenge_live_text"
+      android:textColor="@color/white_color"
+      android:textSize="16sp"
+      android:visibility="gone"
+      app:fontName="Oswald-Medium.ttf" />
 
-        <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/liveTextViewVideoChallenge"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="7dp"
-            android:layout_marginLeft="7dp"
-            android:layout_marginTop="7dp"
-            android:background="@drawable/border_live_text_on_image_video_challenge"
-            android:elevation="4dp"
-            android:paddingLeft="10dp"
-            android:paddingTop="4dp"
-            android:paddingRight="10dp"
-            android:paddingBottom="4dp"
-            android:text="@string/video_challenge_live_text"
-            android:textColor="@color/white_color"
-            android:textSize="16sp"
-            android:visibility="gone"
-            app:fontName="Oswald-Medium.ttf" />
+    <ImageView
+      android:id="@+id/info"
+      android:layout_width="26dp"
+      android:layout_height="26dp"
+      android:layout_alignRight="@+id/tagImageView"
+      android:layout_margin="10dp"
+      android:background="@drawable/round_circle"
+      android:elevation="7dp"
+      android:padding="3dp"
+      android:tint="@color/app_red"
+      app:srcCompat="@drawable/ic_info" />
 
-        <ImageView
-            android:id="@+id/info"
-            android:layout_width="26dp"
-            android:layout_height="26dp"
-            android:layout_alignRight="@+id/tagImageView"
-            android:layout_margin="10dp"
-            android:background="@drawable/round_circle"
-            android:elevation="7dp"
-            android:padding="3dp"
-            android:tint="@color/app_red"
-            app:srcCompat="@drawable/ic_info" />
-
-        <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/challengeNameText"
-            android:layout_width="246dp"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/tagImageView"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="@dimen/space_10"
-            android:layout_marginBottom="10dp"
-            android:elevation="@dimen/space_10"
-            android:ellipsize="marquee"
-            android:shadowColor="@color/black_color"
-            android:shadowDx="1"
-            android:shadowDy="1"
-            android:shadowRadius="2"
-            android:singleLine="true"
-            android:text="#AWW MOMENTS"
-            android:textColor="@color/white_color"
-            android:textSize="22sp"
-            app:fontName="oswald_regular.ttf" />
-    </RelativeLayout>
+    <com.mycity4kids.widget.CustomFontTextView
+      android:id="@+id/challengeNameText"
+      android:layout_width="246dp"
+      android:layout_height="wrap_content"
+      android:layout_alignBottom="@id/tagImageView"
+      android:layout_marginBottom="10dp"
+      android:elevation="@dimen/space_10"
+      android:ellipsize="marquee"
+      android:paddingStart="@dimen/space_10"
+      android:paddingEnd="@dimen/space_10"
+      android:shadowColor="@color/black_color"
+      android:shadowDx="1"
+      android:shadowDy="1"
+      android:shadowRadius="2"
+      android:singleLine="true"
+      android:text=""
+      android:textColor="@color/white_color"
+      android:textSize="22sp"
+      app:fontName="oswald_regular.ttf" />
+  </RelativeLayout>
 </androidx.cardview.widget.CardView>
