--- a/app/src/main/res/layout/share_button_widget.xml
+++ b/app/src/main/res/layout/share_button_widget.xml
@@ -27,6 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:layout_toEndOf="@+id/shareImageView"
         android:text=""
         android:textColor="@color/white_color" />
