--- a/app/src/main/res/layout/mom_vlog_follow_following_adaptr.xml
+++ b/app/src/main/res/layout/mom_vlog_follow_following_adaptr.xml
@@ -1,103 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  android:layout_width="match_parent"
+  android:layout_height="wrap_content"
+  android:background="#FFFFFF"
+  android:orientation="vertical">
+
+  <com.mycity4kids.widget.CustomFontTextView
+    android:id="@+id/headerTextView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#FFFFFF"
-    android:orientation="vertical">
+    android:layout_alignParentStart="true"
+    android:layout_alignParentTop="true"
+    android:background="#F9F9F9"
+    android:gravity="center"
+    android:padding="39dp"
+    android:text="Follow creators to create you own following feed"
+    android:textColor="#BABABA"
+    android:visibility="gone"
+    app:fontName="Roboto-Regular.ttf" />
+
+  <com.mycity4kids.widget.CustomFontTextView
+    android:id="@+id/suggestingFollowTextView"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_below="@id/headerTextView"
+    android:layout_marginStart="13dp"
+    android:layout_marginTop="@dimen/space_16"
+    android:text="People you would like to follow"
+    android:textColor="#515151"
+    android:textSize="@dimen/space_16"
+    android:visibility="gone"
+    app:fontName="Roboto-Medium.ttf" />
+
+
+  <RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_below="@+id/suggestingFollowTextView"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:padding="@dimen/space_16">
+
+    <com.mikhaellopez.circularimageview.CircularImageView
+      android:id="@+id/authorImageView"
+      android:layout_width="62dp"
+      android:layout_height="62dp"
+      android:layout_centerHorizontal="true"
+      android:src="@drawable/default_article" />
+
+    <ProgressBar
+      android:id="@+id/homeProgress"
+      android:layout_width="62dp"
+      android:layout_height="62dp"
+      android:layout_centerHorizontal="true"
+      android:indeterminate="true"
+      android:indeterminateTint="@color/grey_light"
+      android:indeterminateTintMode="src_atop"
+      android:visibility="visible" />
 
     <com.mycity4kids.widget.CustomFontTextView
-        android:id="@+id/headerTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:background="#F9F9F9"
-        android:gravity="center"
-        android:padding="39dp"
-        android:text="Follow creators to create you own following feed"
-        android:textColor="#BABABA"
-        android:visibility="gone"
-        app:fontName="Roboto-Regular.ttf" />
+      android:id="@+id/authorName"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_below="@id/authorImageView"
+      android:layout_centerHorizontal="true"
+      android:layout_marginTop="6dp"
+      android:ellipsize="marquee"
+      android:gravity="center"
+      android:lines="2"
+      android:text="Deepika Pandey nbknk jbdkbkvdk"
+      android:textColor="#515151"
+      app:fontName="Roboto-Medium.ttf" />
 
     <com.mycity4kids.widget.CustomFontTextView
-        android:id="@+id/suggestingFollowTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/headerTextView"
-        android:layout_marginStart="13dp"
-        android:layout_marginTop="@dimen/space_16"
-        android:text="People you would like to follow"
-        android:textColor="#515151"
-        android:textSize="@dimen/space_16"
-        android:visibility="gone"
-        app:fontName="Roboto-Medium.ttf" />
+      android:id="@+id/rank"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_below="@id/authorName"
+      android:layout_centerHorizontal="true"
+      android:layout_marginTop="6dp"
+      android:text="Rank:45"
+      android:textColor="#979797"
+      app:fontName="Roboto-Regular.ttf" />
 
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/suggestingFollowTextView"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:padding="@dimen/space_16">
-
-        <com.mikhaellopez.circularimageview.CircularImageView
-            android:id="@+id/authorImageView"
-            android:layout_width="62dp"
-            android:layout_height="62dp"
-            android:layout_centerHorizontal="true"
-            android:src="@drawable/default_article" />
-
-        <ProgressBar
-            android:id="@+id/homeProgress"
-            android:layout_width="62dp"
-            android:layout_height="62dp"
-            android:layout_centerHorizontal="true"
-            android:indeterminate="true"
-            android:indeterminateTint="@color/grey_light"
-            android:indeterminateTintMode="src_atop"
-            android:visibility="visible" />
-
-        <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/authorName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/authorImageView"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="6dp"
-            android:ellipsize="marquee"
-            android:gravity="center"
-            android:lines="2"
-            android:text="Deepika Pandey nbknk jbdkbkvdk"
-            android:textColor="#515151"
-            app:fontName="Roboto-Medium.ttf" />
-
-        <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/rank"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/authorName"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="6dp"
-            android:text="Rank:45"
-            android:textColor="#979797"
-            app:fontName="Roboto-Regular.ttf" />
-
-        <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/followTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/rank"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="6dp"
-            android:background="@drawable/red_rounded_border_shape"
-            android:paddingStart="13dp"
-            android:paddingTop="5dp"
-            android:paddingEnd="@dimen/space_13"
-            android:paddingBottom="5dp"
-            android:text="Follow"
-            android:textColor="@color/app_red"
-            app:fontName="Roboto-Medium.ttf" />
-    </RelativeLayout>
+    <com.mycity4kids.widget.CustomFontTextView
+      android:id="@+id/followTextView"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_below="@id/rank"
+      android:layout_centerHorizontal="true"
+      android:layout_marginTop="6dp"
+      android:background="@drawable/red_rounded_border_shape"
+      android:paddingStart="13dp"
+      android:paddingTop="5dp"
+      android:paddingEnd="@dimen/space_13"
+      android:paddingBottom="5dp"
+      android:text="Follow"
+      android:textColor="@color/white"
+      android:textSize="@dimen/space_12"
+      app:fontName="Roboto-Medium.ttf" />
+  </RelativeLayout>
 </RelativeLayout>
