--- a/app/src/main/res/layout/parallel_feed_follow_following_carousal_layout.xml
+++ b/app/src/main/res/layout/parallel_feed_follow_following_carousal_layout.xml
@@ -3,17 +3,20 @@
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
-  android:background="@color/white">
+  android:background="@color/black"
+  android:paddingTop="@dimen/space_20"
+  android:paddingBottom="@dimen/space_20">
 
   <com.mycity4kids.widget.CustomFontTextView
     android:id="@+id/headerTextView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="@dimen/space_16"
-    android:layout_marginTop="@dimen/space_16"
-    android:background="@color/white"
+    android:background="@color/video_feed_bg"
+    android:paddingStart="@dimen/space_16"
+    android:paddingTop="@dimen/space_16"
+    android:paddingEnd="@dimen/space_16"
     android:text="@string/follow_the_best_vloggers_on_momspresso"
-    android:textColor="#515151"
+    android:textColor="@color/white"
     android:textSize="@dimen/space_16"
     app:fontName="Roboto-Medium.ttf" />
 
@@ -22,8 +25,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_below="@+id/headerTextView"
-    android:background="@color/white"
-    android:visibility="gone">
+    android:background="@color/video_feed_bg"
+    android:visibility="visible">
 
 
     <LinearLayout
@@ -36,21 +39,33 @@
       android:orientation="horizontal"
       android:visibility="visible">
 
-
       <LinearLayout
         android:id="@+id/carosalContainer1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@color/video_feed_bg"
         android:gravity="center"
         android:orientation="vertical"
         android:padding="@dimen/space_30">
 
-        <com.mikhaellopez.circularimageview.CircularImageView
-          android:id="@+id/authorImageView1"
-          android:layout_width="62dp"
-          android:layout_height="62dp"
-          android:src="@drawable/default_article" />
+        <RelativeLayout
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content">
+
+          <com.mikhaellopez.circularimageview.CircularImageView
+            android:id="@+id/authorImageView1"
+            android:layout_width="62dp"
+            android:layout_height="62dp"
+            android:src="@drawable/default_article" />
+
+          <ProgressBar
+            android:id="@+id/progress1"
+            android:layout_width="62dp"
+            android:layout_height="62dp"
+            />
+
+        </RelativeLayout>
+
 
         <com.mycity4kids.widget.CustomFontTextView
           android:id="@+id/authorNameTextView1"
@@ -58,7 +73,7 @@
           android:layout_height="wrap_content"
           android:layout_marginTop="6dp"
           android:text="Deepika Pandey"
-          android:textColor="#515151"
+          android:textColor="@color/white"
           app:fontName="Roboto-Medium.ttf" />
 
         <com.mycity4kids.widget.CustomFontTextView
@@ -92,16 +107,27 @@
         android:id="@+id/carosalContainer2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@color/video_feed_bg"
         android:gravity="center"
         android:orientation="vertical"
         android:padding="@dimen/space_30">
 
-        <com.mikhaellopez.circularimageview.CircularImageView
-          android:id="@+id/authorImageView2"
-          android:layout_width="62dp"
-          android:layout_height="62dp"
-          android:src="@drawable/default_article" />
+        <RelativeLayout
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content">
+
+          <com.mikhaellopez.circularimageview.CircularImageView
+            android:id="@+id/authorImageView2"
+            android:layout_width="62dp"
+            android:layout_height="62dp"
+            android:src="@drawable/default_article" />
+
+          <ProgressBar
+            android:id="@+id/progress2"
+            android:layout_width="62dp"
+            android:layout_height="62dp" />
+
+        </RelativeLayout>
 
         <com.mycity4kids.widget.CustomFontTextView
           android:id="@+id/authorNameTextView2"
@@ -109,7 +135,7 @@
           android:layout_height="wrap_content"
           android:layout_marginTop="6dp"
           android:text="Deepika Pandey"
-          android:textColor="#515151"
+          android:textColor="@color/white"
           app:fontName="Roboto-Medium.ttf" />
 
         <com.mycity4kids.widget.CustomFontTextView
@@ -117,6 +143,7 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="6dp"
+          android:text="Rank:45"
           android:textColor="#979797"
           app:fontName="Roboto-Regular.ttf" />
 
@@ -142,16 +169,27 @@
         android:id="@+id/carosalContainer3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@color/video_feed_bg"
         android:gravity="center"
         android:orientation="vertical"
         android:padding="@dimen/space_30">
 
-        <com.mikhaellopez.circularimageview.CircularImageView
-          android:id="@+id/authorImageView3"
-          android:layout_width="62dp"
-          android:layout_height="62dp"
-          android:src="@drawable/default_article" />
+        <RelativeLayout
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content">
+
+          <com.mikhaellopez.circularimageview.CircularImageView
+            android:id="@+id/authorImageView3"
+            android:layout_width="62dp"
+            android:layout_height="62dp"
+            android:src="@drawable/default_article" />
+
+          <ProgressBar
+            android:id="@+id/progress3"
+            android:layout_width="62dp"
+            android:layout_height="62dp" />
+
+        </RelativeLayout>
 
         <com.mycity4kids.widget.CustomFontTextView
           android:id="@+id/authorNameTextView3"
@@ -159,7 +197,7 @@
           android:layout_height="wrap_content"
           android:layout_marginTop="6dp"
           android:text="Deepika Pandey"
-          android:textColor="#515151"
+          android:textColor="@color/white"
           app:fontName="Roboto-Medium.ttf" />
 
         <com.mycity4kids.widget.CustomFontTextView
@@ -167,6 +205,7 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="6dp"
+          android:text="Rank:45"
           android:textColor="#979797"
           app:fontName="Roboto-Regular.ttf" />
 
@@ -192,16 +231,27 @@
         android:id="@+id/carosalContainer4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@color/video_feed_bg"
         android:gravity="center"
         android:orientation="vertical"
         android:padding="@dimen/space_30">
 
-        <com.mikhaellopez.circularimageview.CircularImageView
-          android:id="@+id/authorImageView4"
-          android:layout_width="62dp"
-          android:layout_height="62dp"
-          android:src="@drawable/default_article" />
+        <RelativeLayout
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content">
+
+          <com.mikhaellopez.circularimageview.CircularImageView
+            android:id="@+id/authorImageView4"
+            android:layout_width="62dp"
+            android:layout_height="62dp"
+            android:src="@drawable/default_article" />
+
+          <ProgressBar
+            android:id="@+id/progress4"
+            android:layout_width="62dp"
+            android:layout_height="62dp" />
+
+        </RelativeLayout>
 
         <com.mycity4kids.widget.CustomFontTextView
           android:id="@+id/authorNameTextView4"
@@ -209,7 +259,7 @@
           android:layout_height="wrap_content"
           android:layout_marginTop="6dp"
           android:text="Deepika Pandey"
-          android:textColor="#515151"
+          android:textColor="@color/white"
           app:fontName="Roboto-Medium.ttf" />
 
         <com.mycity4kids.widget.CustomFontTextView
@@ -217,6 +267,7 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="6dp"
+          android:text="Rank:45"
           android:textColor="#979797"
           app:fontName="Roboto-Regular.ttf" />
 
@@ -242,16 +293,27 @@
         android:id="@+id/carosalContainer5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@color/video_feed_bg"
         android:gravity="center"
         android:orientation="vertical"
         android:padding="@dimen/space_30">
 
-        <com.mikhaellopez.circularimageview.CircularImageView
-          android:id="@+id/authorImageView5"
-          android:layout_width="62dp"
-          android:layout_height="62dp"
-          android:src="@drawable/default_article" />
+        <RelativeLayout
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content">
+
+          <com.mikhaellopez.circularimageview.CircularImageView
+            android:id="@+id/authorImageView5"
+            android:layout_width="62dp"
+            android:layout_height="62dp"
+            android:src="@drawable/default_article" />
+
+          <ProgressBar
+            android:id="@+id/progress5"
+            android:layout_width="62dp"
+            android:layout_height="62dp" />
+
+        </RelativeLayout>
 
         <com.mycity4kids.widget.CustomFontTextView
           android:id="@+id/authorNameTextView5"
@@ -259,7 +321,7 @@
           android:layout_height="wrap_content"
           android:layout_marginTop="6dp"
           android:text="Deepika Pandey"
-          android:textColor="#515151"
+          android:textColor="@color/white"
           app:fontName="Roboto-Medium.ttf" />
 
         <com.mycity4kids.widget.CustomFontTextView
@@ -267,6 +329,7 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="6dp"
+          android:text="Rank:45"
           android:textColor="#979797"
           app:fontName="Roboto-Regular.ttf" />
 
@@ -292,16 +355,28 @@
         android:id="@+id/carosalContainer6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@color/video_feed_bg"
         android:gravity="center"
         android:orientation="vertical"
         android:padding="@dimen/space_30">
 
-        <com.mikhaellopez.circularimageview.CircularImageView
-          android:id="@+id/authorImageView6"
-          android:layout_width="62dp"
-          android:layout_height="62dp"
-          android:src="@drawable/default_article" />
+        <RelativeLayout
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content">
+
+          <com.mikhaellopez.circularimageview.CircularImageView
+            android:id="@+id/authorImageView6"
+            android:layout_width="62dp"
+            android:layout_height="62dp"
+            android:src="@drawable/default_article" />
+
+          <ProgressBar
+            android:id="@+id/progress6"
+
+            android:layout_width="62dp"
+            android:layout_height="62dp" />
+
+        </RelativeLayout>
 
         <com.mycity4kids.widget.CustomFontTextView
           android:id="@+id/authorNameTextView6"
@@ -309,7 +384,7 @@
           android:layout_height="wrap_content"
           android:layout_marginTop="6dp"
           android:text="Deepika Pandey"
-          android:textColor="#515151"
+          android:textColor="@color/white"
           app:fontName="Roboto-Medium.ttf" />
 
         <com.mycity4kids.widget.CustomFontTextView
@@ -317,6 +392,7 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="6dp"
+          android:text="Rank:45"
           android:textColor="#979797"
           app:fontName="Roboto-Regular.ttf" />
 
@@ -346,15 +422,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_below="@+id/headerTextView"
-    android:background="@color/white"
-    android:visibility="visible"
+    android:background="@color/video_feed_bg"
+    android:visibility="gone"
     app:duration="1000">
 
 
     <HorizontalScrollView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:background="@color/white">
+      android:background="@color/video_feed_bg">
 
       <LinearLayout
         android:layout_width="wrap_content"
@@ -369,6 +445,7 @@
         <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
+          android:background="@color/video_feed_bg"
           android:gravity="center"
           android:orientation="vertical"
           android:padding="30dp">
@@ -419,6 +496,7 @@
         <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
+          android:background="@color/video_feed_bg"
           android:gravity="center"
           android:orientation="vertical"
           android:padding="@dimen/space_30">
@@ -468,6 +546,7 @@
         <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
+          android:background="@color/video_feed_bg"
           android:gravity="center"
           android:orientation="vertical"
           android:padding="@dimen/space_30">
@@ -517,6 +596,7 @@
         <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
+          android:background="@color/video_feed_bg"
           android:gravity="center"
           android:orientation="vertical"
           android:padding="@dimen/space_30">
@@ -565,6 +645,7 @@
         <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
+          android:background="@color/video_feed_bg"
           android:gravity="center"
           android:orientation="vertical"
           android:padding="@dimen/space_30">
@@ -613,6 +694,7 @@
         <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
+          android:background="@color/video_feed_bg"
           android:gravity="center"
           android:orientation="vertical"
           android:padding="@dimen/space_30">
