--- a/app/src/main/res/layout/video_category_selection_item.xml
+++ b/app/src/main/res/layout/video_category_selection_item.xml
@@ -3,7 +3,7 @@
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
-  android:layout_margin="10dp"
+  android:layout_margin="16dp"
   android:orientation="vertical">
 
   <androidx.cardview.widget.CardView
@@ -12,10 +12,10 @@
     app:cardCornerRadius="10dp">
 
     <androidx.appcompat.widget.AppCompatImageView
-      android:id="@+id/categoryImageView"
-      android:layout_width="100dp"
-      android:layout_height="100dp"
-      android:scaleType="centerCrop" />
+    android:id="@+id/categoryImageView"
+    android:layout_width="100dp"
+    android:layout_height="100dp"
+    android:scaleType="centerCrop" />
   </androidx.cardview.widget.CardView>
 
   <com.mycity4kids.widget.CustomFontTextView
@@ -23,6 +23,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
-    android:text="Aww Moment" />
+    android:text=""
+    android:textColor="@color/app_light_black" />
 
 </LinearLayout>
