--- a/app/src/main/res/layout/video_challenge_selection_vertical_item.xml
+++ b/app/src/main/res/layout/video_challenge_selection_vertical_item.xml
@@ -2,19 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
+  android:layout_marginBottom="12dp"
   android:orientation="vertical">
 
   <com.mycity4kids.widget.CustomFontTextView
     android:id="@+id/categoryTextView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:textSize="20sp"
+    android:text=""
     android:textColor="@color/app_dark_black"
-    android:text="Challenge Label" />
+    android:textSize="20sp" />
 
   <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/challengeRecyclerView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent"
+    android:layout_marginTop="12dp" />
 
 </LinearLayout>
